--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,19 @@
-git 
+Django==4.2
+gunicorn==20.1.0
+psycopg2==2.9.6
+dj-database-url==0.5.0
+django-environ==0.9.0
+whitenoise==6.0.0
+django-crispy-forms==1.14.0
+Pillow==9.1.0
+django-allauth==0.47.0
+django-debug-toolbar==3.5.0
+django-storages==1.13.1
+bcrypt==3.2.0
+djangorestframework==3.14.0
+celery==5.2.7
+django-heroku==0.3.1
+python-decouple==3.6
+requests==2.28.2
+black==22.12.0
+flake8==5.0.4
